--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.3.4
 autopep8==1.5.7
+dj-database-url==0.5.0
 Django==3.2.3
+django-on-heroku==1.1.2
 djangorestframework==3.12.4
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 python-dotenv==0.17.1
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
+whitenoise==5.2.0
