--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 Django==3.2.3
 django-on-heroku==1.1.2
 djangorestframework==3.12.4
+gunicorn==20.1.0
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 python-dotenv==0.17.1
