--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ asgiref==3.3.4
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==3.2.3
+django-cors-headers==3.7.0
 django-on-heroku==1.1.2
 djangorestframework==3.12.4
 gunicorn==20.1.0
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
+PyJWT==2.1.0
 python-dotenv==0.17.1
 pytz==2021.1
 sqlparse==0.4.1
